--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,8 +8,38 @@
   --fundo-card
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+
+
+  --fundo-principal:#fbff04;
+  --texto:#010116;
+  --texto-inverso:#f3e852;
+  --destaque:#5ddbb1;
+  --destaque-inverso:#07291e;
+  --fundo-card:#ebeeed;
+
+}
+
 
 body {
-  background-color: lightgrey;
-  color: blue;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.5em;
+  background-color: var(--fundo-principal);
+  color: var(--texto);
+}
+
+header {
+  background-color: var(--destaque);
+  color: var(--texto);
+  padding: 10px;
+}
+
+#menu ul {
+  list-style: none;
 }
